# bookmark-tui

./: Cargo.toml  README.md
src/: main.rs
