[package]
name = "bookmark-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["event-stream"]}
tap = "1.0.1"
thiserror = "1.0.38"
